--- a/package.json
+++ b/package.json
@@ -9,14 +9,26 @@
     "lint": "eslint"
   },
   "dependencies": {
+    "@ant-design/icons": "^6.1.0",
+    "@google/generative-ai": "^0.24.1",
+    "@reduxjs/toolkit": "^2.11.2",
+    "@tanstack/react-query": "^5.90.12",
+    "antd": "^6.1.1",
+    "axios": "^1.13.2",
+    "bcrypt": "^6.0.0",
+    "clsx": "^2.1.1",
     "hero": "^0.0.0",
+    "jose": "^6.1.3",
     "lucide-react": "^0.556.0",
     "next": "16.0.7",
     "react": "19.2.0",
-    "react-dom": "19.2.0"
+    "react-dom": "19.2.0",
+    "react-redux": "^9.2.0",
+    "tailwind-merge": "^3.4.0"
   },
   "devDependencies": {
     "@tailwindcss/postcss": "^4",
+    "@types/bcrypt": "^6.0.0",
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
