thêm quên mật khẩu

--- a/.env.local
+++ b/.env.local
@@ -1,3 +1,5 @@
 JWT_SECRET=0SBL2HxGZVHxG+JirEDLcb94kHuUx8CsJQUr3ocKjNw=
-NEXT_PUBLIC_API_ROOT=https://vietsignschoolbe-production.up.railway.app
-NEXT_PUBLIC_API_ROOT_NODE=https://vietsignschoolbe-production.up.railway.app
+NEXT_PUBLIC_API_ROOT=http://localhost:5000
+NEXT_PUBLIC_API_ROOT_NODE=http://localhost:5000
+# NEXT_PUBLIC_API_ROOT=https://vietsignschoolbe-production.up.railway.app
+# NEXT_PUBLIC_API_ROOT_NODE=https://vietsignschoolbe-production.up.railway.app
